# telethon-sql

./: README.md  migrate.py  pyproject.toml
telethon_sql/: migrate.py  session.py
